--- a/API/appsettings.json
+++ b/API/appsettings.json
@@ -2,6 +2,7 @@
   "ConnectionStrings": {
     "DefaultConnection": "Server=localhost;Database=GTTest;Uid=root;Pwd=;"
   },
+  "Token": "Скоро осінь, моє панство, скоро осінь",
   "Logging": {
     "LogLevel": {
       "Default": "Information",
