--- a/API/appsettings.json
+++ b/API/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=localhost;Database=GTTest;Uid=root;Pwd=;"
+    "DefaultConnection": "Server=localhost;Database=GTTest;Uid=root;Pwd=my-secret-pw;"
   },
   "Token": "Скоро осінь, моє панство, скоро осінь",
   "Logging": {
